[gd_scene load_steps=8 format=3 uid="uid://cbms6ugqm353t"]

[ext_resource type="Script" uid="uid://dao2etmf7jk3y" path="res://main.gd" id="1_o2ccw"]
[ext_resource type="PackedScene" uid="uid://rfnm1c4vx4gq" path="res://basket.tscn" id="2_qrujo"]

[sub_resource type="LabelSettings" id="LabelSettings_0xm2m"]
font_size = 40
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0xm2m"]
bg_color = Color(0.16470589, 0.16470589, 0.16470589, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="LabelSettings" id="LabelSettings_h2yge"]
font_size = 72
font_color = Color(0.7376877, 0.5097248, 0.4891793, 1)
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_1bvp3"]
font_size = 48
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_o2ccw"]
font_size = 40
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[node name="Main" type="Node2D"]
z_index = -10
script = ExtResource("1_o2ccw")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.09608143, 0.20988944, 0.3797188, 1)

[node name="Basket" parent="." instance=ExtResource("2_qrujo")]
position = Vector2(576, 600)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="CanvasLayer"]
offset_left = 20.0
offset_top = 20.0
offset_right = 171.0
offset_bottom = 75.0
text = "Score: 0"
label_settings = SubResource("LabelSettings_0xm2m")

[node name="LivesLabel" type="Label" parent="CanvasLayer"]
offset_left = 983.0
offset_top = 20.0
offset_right = 1134.0
offset_bottom = 75.0
text = "Lives: 3"
label_settings = SubResource("LabelSettings_0xm2m")

[node name="TimerLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -81.0
offset_top = 20.0
offset_right = 81.0
offset_bottom = 75.0
grow_horizontal = 2
text = "Time: 60"
label_settings = SubResource("LabelSettings_0xm2m")

[node name="GameOverPanel" type="Panel" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -254.0
offset_top = -180.0
offset_right = 246.0
offset_bottom = 170.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0xm2m")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/GameOverPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="GameOverTitle" type="Label" parent="CanvasLayer/GameOverPanel/VBoxContainer"]
layout_mode = 2
text = "GAME OVER!"
label_settings = SubResource("LabelSettings_h2yge")
horizontal_alignment = 1

[node name="FinalScore" type="Label" parent="CanvasLayer/GameOverPanel/VBoxContainer"]
layout_mode = 2
text = "Final Score: 0"
label_settings = SubResource("LabelSettings_1bvp3")
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="CanvasLayer/GameOverPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "PLAY AGAIN"

[node name="LevelLabel" type="Label" parent="CanvasLayer"]
offset_left = 510.0
offset_top = 80.0
offset_right = 643.0
offset_bottom = 135.0
text = "Level 3"
label_settings = SubResource("LabelSettings_o2ccw")

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.6
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(577, 325)
